force-app/main/default/objects/Freight_Offering__c/Freight_Offering__c.object-meta.xml
<CustomObject>
    <label>Freight Offering</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Freight Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>