force-app/main/default/objects/Freight_Offering__c/fields/Additional_equipment__c.field-meta.xml
<CustomField>
    <fullName>Additional_equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional equipment</label>
    <type>Checkbox</type>
</CustomField>