force-app/main/default/objects/Freight_Offering__c/fields/Additional_Freight_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Freight_Presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Freight Presentation</label>
    <type>Checkbox</type>
</CustomField>