force-app/main/default/objects/Freight_Offering__c/fields/B2BBBP__c.field-meta.xml
<CustomField>
    <fullName>B2BBBP__c</fullName>
    <description>Break Bulk Palets</description>
    <inlineHelpText>B2B% and B2C% must add up to 100%</inlineHelpText>
    <label>B2B%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>