force-app/main/default/objects/Freight_Offering__c/fields/Bulk_Pallets__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Pallets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Pallets</label>
    <type>Checkbox</type>
</CustomField>