force-app/main/default/objects/Freight_Offering__c/fields/Cartons__c.field-meta.xml
<CustomField>
    <fullName>Cartons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cartons</label>
    <type>Checkbox</type>
</CustomField>