force-app/main/default/objects/Freight_Offering__c/fields/Customer_Scoping_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Customer_Scoping_Questionnaire__c</fullName>
    <label>Customer Scoping Questionnaire</label>
    <referenceTo>Customer_Scoping_Questionnaire__c</referenceTo>
    <relationshipLabel>Freight Offerings</relationshipLabel>
    <relationshipName>Freight_Offerings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>