force-app/main/default/objects/Freight_Offering__c/fields/DG_as_a_proportion_of_total_volume__c.field-meta.xml
<CustomField>
    <fullName>DG_as_a_proportion_of_total_volume__c</fullName>
    <label>DG % as a proportion of total volume</label>
    <summarizedField>Dangerous_Goods__c.DG_as_a_proportion_of_total_volume__c</summarizedField>
    <summaryForeignKey>Dangerous_Goods__c.Freight_Offering__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>