force-app/main/default/objects/Freight_Offering__c/fields/Foreign_Currency_Qty_Items__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Qty_Items__c</fullName>
    <label>Foreign Currency - Qty Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>