force-app/main/default/objects/Freight_Offering__c/fields/Freight_Offering__c.field-meta.xml
<CustomField>
    <fullName>Freight_Offering__c</fullName>
    <label>Freight Offering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartons</fullName>
            </value>
            <value>
                <fullName>Break Bulk Pallets</fullName>
            </value>
            <value>
                <fullName>Bulk Pallets</fullName>
            </value>
            <value>
                <fullName>Satchels</fullName>
            </value>
            <value>
                <fullName>Incompatible Freight</fullName>
            </value>
            <value>
                <fullName>Dangerous Goods</fullName>
            </value>
            <value>
                <fullName>Additional Freight Presentation</fullName>
            </value>
            <value>
                <fullName>Service Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>