force-app/main/default/objects/Freight_Offering__c/fields/Jewellery_Qty_Connotes__c.field-meta.xml
<CustomField>
    <fullName>Jewellery_Qty_Connotes__c</fullName>
    <label>Jewellery- Qty Connotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>