force-app/main/default/objects/Freight_Offering__c/fields/Pallet_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Quantity__c</fullName>
    <label>Pallet Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>