force-app/main/default/objects/Freight_Offering__c/fields/Permanent_pick_up_days__c.field-meta.xml
<CustomField>
    <fullName>Permanent_pick_up_days__c</fullName>
    <label>Permanent pick-up days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Pick_up_Scheduling__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>