force-app/main/default/objects/Freight_Offering__c/fields/Qty_Connotes_Weekly_Cartons__c.field-meta.xml
<CustomField>
    <fullName>Qty_Connotes_Weekly_Cartons__c</fullName>
    <formula>Qty_ConnotesCartons__c /4.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty Connotes (Weekly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>