force-app/main/default/objects/Freight_Offering__c/fields/Qty_ConnotesCartons__c.field-meta.xml
<CustomField>
    <fullName>Qty_ConnotesCartons__c</fullName>
    <label>Qty Connotes (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>