force-app/main/default/objects/Freight_Offering__c/fields/Qty_Items_cartons__c.field-meta.xml
<CustomField>
    <fullName>Qty_Items_cartons__c</fullName>
    <label>Cartons Qty Items (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>