force-app/main/default/objects/Freight_Offering__c/fields/Qty_Items_Weekly_satchels__c.field-meta.xml
<CustomField>
    <fullName>Qty_Items_Weekly_satchels__c</fullName>
    <formula>Qty_Items_Monthly_satchels__c /4.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satchels/Jiffy Bags Qty Items (Weekly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>