force-app/main/default/objects/Freight_Offering__c/fields/Quantity_3kgSatchels__c.field-meta.xml
<CustomField>
    <fullName>Quantity_3kgSatchels__c</fullName>
    <label>Satchels/Jiffy Bags Quantity (3kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>