force-app/main/default/objects/Freight_Offering__c/fields/Tail_lift_pick_up__c.field-meta.xml
<CustomField>
    <fullName>Tail_lift_pick_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tail lift pick-up</label>
    <type>Checkbox</type>
</CustomField>