force-app/main/default/objects/Freight_Offering__c/fields/ULD_Cage__c.field-meta.xml
<CustomField>
    <fullName>ULD_Cage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ULD/Cage</label>
    <type>Checkbox</type>
</CustomField>