force-app/main/default/objects/Freight_Offering__c/recordTypes/APGL.recordType-meta.xml
<RecordType>
    <fullName>APGL</fullName>
    <active>true</active>
    <label>APGL</label>
</RecordType>