force-app/main/default/objects/Freight_Offering__c/recordTypes/Express.recordType-meta.xml
<RecordType>
    <fullName>Express</fullName>
    <active>true</active>
    <label>Express</label>
</RecordType>