force-app/main/default/objects/Freight_Offering__c/recordTypes/Premium.recordType-meta.xml
<RecordType>
    <fullName>Premium</fullName>
    <active>true</active>
    <label>Premium</label>
</RecordType>