force-app/main/default/objects/Freight_Offering__c/recordTypes/Same_Day_Courier.recordType-meta.xml
<RecordType>
    <fullName>Same_Day_Courier</fullName>
    <active>false</active>
    <label>Same Day Courier</label>
</RecordType>