force-app/main/default/objects/Freight_Offering__c/recordTypes/Special_Services.recordType-meta.xml
<RecordType>
    <fullName>Special_Services</fullName>
    <active>true</active>
    <label>Special Services</label>
</RecordType>