force-app/main/default/objects/Freight_Offering__c/validationRules/Bulk_Pallets_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Bulk_Pallets_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>and (   Bulk_Pallets__c  =true,   


or( 
 ISBLANK(   Qty_PalletsBP__c  ),
 ISBLANK(   Qty_SkidsBP__c  ), 
 ISBLANK(    Max_weightBP__c  )))</errorConditionFormula>
    <errorMessage>Please make sure that Qty pallets, Qty Skids and Max weight fields for Bulk Pallets are not blank</errorMessage>
</ValidationRule>