force-app/main/default/objects/Freight_Offering__c/validationRules/Cant_edit_record_Subbmitted_for_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_edit_record_Subbmitted_for_approval</fullName>
    <active>true</active>
    <errorConditionFormula>Submit_for_Approval__c  =true &amp;&amp; not(ischanged(  LastModifiedDate ))&amp;&amp;$Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>You cant edit the record. You need to change the CSQ status back to Draft</errorMessage>
</ValidationRule>