force-app/main/default/objects/Freight_Offering__c/validationRules/Cartons_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cartons_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>and (Cartons__c =true,   or( 
 ISBLANK( B2BCartons__c ),
 ISBLANK( B2CCartons__c ), 
ISBLANK( Qty_ConnotesCartons__c ),
ISBLANK( Qty_Items_cartons__c )))</errorConditionFormula>
    <errorMessage>Please make sure that B2B%,B2C%, Qty Items and Qty Connotes fields for Cartons are not blank</errorMessage>
</ValidationRule>