force-app/main/default/objects/Freight_Offering__c/validationRules/Cold_Storage_Items_and_Connnotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Cold_Storage_Items_and_Connnotes</fullName>
    <active>true</active>
    <errorConditionFormula>And(  Additional_Freight_Presentation__c  = true,  
(or(
and (   ISBLANK(  Cold_Storage_Qty_Connotes__c  ),   

not( ISBLANK(    Cold_Storage_Qty_Items__c  ))),


and (   ISBLANK(  Cold_Storage_Qty_Items__c    ),   

not( ISBLANK( Cold_Storage_Qty_Connotes__c   ))))))</errorConditionFormula>
    <errorMessage>Please make sure that you have entered a value for Cold Storage Qty Items and  Medical Qty Connotes fields for Additional Freight Presentation</errorMessage>
</ValidationRule>