force-app/main/default/objects/Freight_Offering__c/validationRules/Freight_Offering_Special_Services.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Offering_Special_Services</fullName>
    <active>true</active>
    <errorConditionFormula>and(
Cartons__c=false,
Satchels_Jiffy_Bags__c=false,
Additional_Freight_Presentation__c=false,
Incompatible_Freight__c =false,
Bulk_Pallets__c=false,  Service_Requirements__c =false,  RecordTypeId =&apos;0125D0000000lIt&apos;)</errorConditionFormula>
    <errorMessage>Please select a Freight Offering</errorMessage>
</ValidationRule>