force-app/main/default/objects/Freight_Offering__c/validationRules/Medical_Items_and_Connnotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Medical_Items_and_Connnotes</fullName>
    <active>true</active>
    <errorConditionFormula>And( Incompatible_Freight__c = true,  
(or(
and (   ISBLANK(  Medical_Qty_Connotes__c ),   

not( ISBLANK(   Medical_Qty_ItemsIFMedical__c  ))),


and (   ISBLANK( Medical_Qty_ItemsIFMedical__c  ),   

not( ISBLANK(  Medical_Qty_Connotes__c ))))))</errorConditionFormula>
    <errorMessage>Please make sure that you have entered a value for Medical Qty Items and  Medical Qty Connotes fields for Incompatible Freight</errorMessage>
</ValidationRule>