force-app/main/default/objects/Freight_Offering__c/validationRules/Oversize.validationRule-meta.xml
<ValidationRule>
    <fullName>Oversize</fullName>
    <active>true</active>
    <errorConditionFormula>And( Incompatible_Freight__c = true,  
(or(
and (   ISBLANK(   Oversize_Qty_Items__c  ),   

not( ISBLANK(   Oversize_Qty_Connotes__c  ))),


and (   ISBLANK( Oversize_Qty_Connotes__c ),   

not( ISBLANK(   Oversize_Qty_Items__c  ))))))</errorConditionFormula>
    <errorMessage>Please make sure that you have entered a value for Oversize Qty Items and Oversize Qty Connotes fields for Incompatible Freight</errorMessage>
</ValidationRule>