force-app/main/default/objects/Freight_Offering__c/validationRules/Oversize_cartons.validationRule-meta.xml
<ValidationRule>
    <fullName>Oversize_cartons</fullName>
    <active>true</active>
    <errorConditionFormula>And( Incompatible_Freight__c = true,  
(or(
and (   ISBLANK( Oversize_Cartons_Qty_Connotes__c),   

not( ISBLANK(  Oversize_cartons_Qty_Items__c ))),


and (   ISBLANK( Oversize_cartons_Qty_Items__c ),   

not( ISBLANK(  Oversize_Cartons_Qty_Connotes__c ))))))</errorConditionFormula>
    <errorMessage>Please make sure that you have entered a value for Oversize cartons Qty Items and Oversize cartons Qty Connotes fields for Incompatible Freight</errorMessage>
</ValidationRule>