force-app/main/default/objects/Freight_Offering__c/validationRules/Perishables_Currency_Items_and_Connnotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Perishables_Currency_Items_and_Connnotes</fullName>
    <active>true</active>
    <errorConditionFormula>And(  Additional_Freight_Presentation__c  = true,  
(or(
and (   ISBLANK(   Perishables_Qty_Connotes__c   ),   

not( ISBLANK(  Perishables_Qty_Items__c  ))),


and (   ISBLANK( Perishables_Qty_Items__c  ),   

not( ISBLANK( Perishables_Qty_Connotes__c ))))))</errorConditionFormula>
    <errorMessage>Please make sure that you have entered a value for Perishables Qty Items and  Medical Qty Connotes fields for Additional Freight Presentation</errorMessage>
</ValidationRule>