force-app/main/default/objects/Freight_Offering__c/validationRules/Pickup_Scheduling.validationRule-meta.xml
<ValidationRule>
    <fullName>Pickup_Scheduling</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Pick_up_Scheduling__c , &quot;Adhoc&quot;) &amp;&amp;   or(
ISBLANK( Distribution_Network_Interstate_metro__c ), 
ISBLANK( Distribution_Network_Interstate_metro__c ) ,
 ISBLANK( Distribution_Network_Interstate_region__c ), 
 ISBLANK( Distribution_Network_Intrastate_metro__c ),
  ISBLANK(Required_vehicle_arrival_time__c ),
 ISBLANK( Freight_ready_time__c ),
  ISBLANK(Closing_time__c ),
  ISBLANK(Approx_loading_time__c ))</errorConditionFormula>
    <errorMessage>Please make sure that all of the fields under the Logistics Requirements section are not blank</errorMessage>
</ValidationRule>