force-app/main/default/objects/Freight_Offering__c/validationRules/S8_Drugs_Items_and_Connnotes.validationRule-meta.xml
<ValidationRule>
    <fullName>S8_Drugs_Items_and_Connnotes</fullName>
    <active>true</active>
    <errorConditionFormula>And(  Additional_Freight_Presentation__c  = true,  
(or(
and (   ISBLANK(   S8_Drugs_Qty_Connotes__c   ),   

not( ISBLANK(   S8_Drugs_Qty_Items__c  ))),


and (   ISBLANK(  S8_Drugs_Qty_Items__c ),   

not( ISBLANK(  S8_Drugs_Qty_Connotes__c   ))))))</errorConditionFormula>
    <errorMessage>Please make sure that you have entered a value for S8 Drugs Qty Items and  Medical Qty Connotes fields for Additional Freight Presentation</errorMessage>
</ValidationRule>