force-app/main/default/objects/Freight_Offering__c/validationRules/Satchels_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Satchels_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>and (   Satchels_Jiffy_Bags__c =true,   


or( 
 ISBLANK(   B2BSatchels__c  ),
 ISBLANK(   B2CSatchels__c  )))</errorConditionFormula>
    <errorMessage>Please make sure that B2B%,B2C% and Qty fields for Satchels are not blank</errorMessage>
</ValidationRule>